fable/test/valid/implicit_integer_a.f
      program prog
      implicit integer(a)
      write(6, *) a
      end
