fable/test/syntax_error/exclamation_mark_syndrome.f
      program prog
      write(6, *) 'ab
     !!cd' !
     !ef'
      end
